Add link to organizational structure page

--- a/html/profile.html
+++ b/html/profile.html
@@ -82,6 +82,13 @@
             8. Mauris tincidunt, nibh eu sollicitudin molestie, dolor sapien congue tortor, a pulvinar sapien turpis sed ante. Donec nec est elementum, euismod nulla in, mollis nunc.</p>
       </div>
       <!-- End Vision & Mission -->
+    
+    <!-- Organizational Structure -->
+    <h1 id="title">Struktur Organisasi Sekolah SMP Negeri 3 Padalarang</h1>
+    <div class="box-org-struc">
+        <img src="../img/Struktur Organisasi D'Techno.jpg">
+    </div>
+    <!-- End Organizational Structure -->
 
       <!-- Footer -->
     <footer>
