--- a/html/profile.html
+++ b/html/profile.html
@@ -84,11 +84,8 @@
       <!-- End Vision & Mission -->
     
     <!-- Organizational Structure -->
-    <h1 id="title">Struktur Organisasi Sekolah SMP Negeri 3 Padalarang</h1>
-    <div class="box-org-struc">
-        <img src="../img/Struktur Organisasi D'Techno.jpg">
-    </div>
-    <!-- End Organizational Structure -->
+      <p class="struc-org"><a href="structure-org.html">Struktur Organisasi</a> SMP Negeri 3 Padalarang</p>
+      <!-- End Organizational Structure -->
 
       <!-- Footer -->
     <footer>
