--- a/html/profile.html
+++ b/html/profile.html
@@ -84,7 +84,7 @@
       <!-- End Vision & Mission -->
     
     <!-- Organizational Structure -->
-      <p class="struc-org"><a href="structure-org.html">Struktur Organisasi</a> SMP Negeri 3 Padalarang</p>
+      <p class="org-struc"><a href="structure-org.html">Struktur Organisasi</a> SMP Negeri 3 Padalarang</p>
       <!-- End Organizational Structure -->
 
       <!-- Footer -->
