--- a/html/structure-org.html
+++ b/html/structure-org.html
@@ -58,7 +58,7 @@
     <!-- Structure Organization -->
     <h1 id="title">Struktur Organisasi Sekolah SMP Negeri 3 Padalarang</h1>
     <div class="box-struc-org">
-        <img src="../img/Struktur Organisasi D'Techno.jpg">
+        <img src="../img/Struktur Organisasi D'Techno.jpg" alt="Max-width : 1351px">
     </div>
     <!-- End Structure Organization -->
 
